2014-05-06  Jerry DeLisle  <jvdelisle@gcc.gnu>

	PR libfortran/61049
	* gfortran.dg/list_read_13.f: New test.

2014-05-06  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/60999
	* g++.dg/cpp0x/nsdmi-template9.C: New.
	* g++.dg/cpp0x/nsdmi-template10.C: Likewise.

2014-05-06  Kenneth Zadeck  <zadeck@naturalbridge.com>
	    Mike Stump  <mikestump@comcast.net>
	    Richard Sandiford  <rdsandiford@googlemail.com>

	* gcc.dg/tree-ssa/pr45427.c: Update to look for 0x0 instead of 0.

2014-05-05  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/60965
	* g++.dg/ipa/devirt-32.C: New testcase.

2014-05-05  Richard Biener  <rguenther@suse.de>

	PR middle-end/61010
	* gcc.dg/torture/pr61010.c: New testcase.

2014-05-05  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* gcc.target/s390/leaf-profile.c: New testcase.

2014-05-05  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* gcc.dg/hoist-register-pressure-1.c: Replace int with long.
	Disable asm scan for s390.
	* gcc.dg/hoist-register-pressure-2.c: Likewise.
	* gcc.dg/hoist-register-pressure-3.c: Likewise.

2014-05-05  Bin Cheng  <bin.cheng@arm.com>

	PR tree-optimization/60363
	* gcc.dg/tree-ssa/ssa-dom-thread-4.c: Revert XFAIL test.

2014-05-04  Peter Bergner  <bergner@vnet.ibm.com>

	* gcc.target/powerpc/pack02.c (dg-options): Add -mhard-float.
	(dg-require-effective-target): Change target to powerpc_fprs.
	* gcc.target/powerpc/pack03.c (dg-options): Add -mhard-dfp.
	(dg-require-effective-target): Change target to dfprt.

2014-05-03  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/58582
	* g++.dg/cpp0x/deleted4.C: New.
	* g++.dg/cpp0x/deleted5.C: Likewise.
	* g++.dg/cpp0x/deleted6.C: Likewise.

2014-05-03  Dominique d'Humieres <dominiq@lps.ens.fr>

	PR fortran/61025
	* gfortran.dg/coarray_lib_this_image_1.f90: Adjust the dg-final
	regexps for -m32.
	* gfortran.dg/coarray_lib_this_image_2.f90: Likewise.
	* gfortran.dg/coarray_poly_6.f90: Likewise.
	* gfortran.dg/coarray_poly_7.f90: Likewise.