@@ -1,3 +1,8 @@
+2014-05-07  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/57864
+	* gcc.dg/torture/pr57864.c: New testcase.
+
 2014-05-06  Jerry DeLisle  <jvdelisle@gcc.gnu>
 
 	PR libfortran/61049
